WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100748
[EFL][WK2] Fix EFL build after
r132887
https://bugs.webkit.org/show_bug.cgi?id=100748
Summary
[EFL][WK2] Fix EFL build after r132887
Mikhail Pozdnyakov
Reported
2012-10-30 05:18:14 PDT
EFL build fails with WTF_USE_TILED_BACKING_STORE enabled after
http://trac.webkit.org/changeset/132887
. Sorry for it.
Attachments
patch
(1.50 KB, patch)
2012-10-30 05:30 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-10-30 05:30:11 PDT
Created
attachment 171427
[details]
patch
Chris Dumez
Comment 2
2012-10-30 05:37:13 PDT
Comment on
attachment 171427
[details]
patch LGTM.
Chris Dumez
Comment 3
2012-10-30 05:38:08 PDT
However, We usually use [AC] tag in bug title. You should also mention that this fixes the build when accelerated compositing is enabled.
Gyuyoung Kim
Comment 4
2012-10-30 05:41:29 PDT
Comment on
attachment 171427
[details]
patch You don't need to request r? when fixing build break.
WebKit Review Bot
Comment 5
2012-10-30 06:38:10 PDT
Comment on
attachment 171427
[details]
patch Clearing flags on attachment: 171427 Committed
r132905
: <
http://trac.webkit.org/changeset/132905
>
WebKit Review Bot
Comment 6
2012-10-30 06:38:15 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 7
2012-10-30 07:07:32 PDT
(In reply to
comment #4
)
> (From update of
attachment 171427
[details]
) > You don't need to request r? when fixing build break.
As I commented, the build is only broken is AC is enabled (which is not the default). Does it still count as a build fix?
Antonio Gomes
Comment 8
2012-10-30 09:56:30 PDT
(In reply to
comment #7
)
> (In reply to
comment #4
) > > (From update of
attachment 171427
[details]
[details]) > > You don't need to request r? when fixing build break. > > As I commented, the build is only broken is AC is enabled (which is not the default). Does it still count as a build fix?
yes.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug