[EFL][WK2] Fix EFL build after r132887 https://bugs.webkit.org/show_bug.cgi?id=100748

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-10-30
Reviewed by Gyuyoung Kim.

Fixed EFL build failure with WTF_USE_TILED_BACKING_STORE enabled caused by http://trac.webkit.org/changeset/132887.

* UIProcess/efl/PageLoadClientEfl.cpp:
(WebKit::PageLoadClientEfl::didCommitLoadForFrame):

Canonical link: https://commits.webkit.org/118789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132905 268f45cc-cd09-0410-ab3c-d52691b4dbfc